--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -1,5 +1,6 @@
 $black: #494949;
 $orange:  #F86C4F;
+$gray: #e8e8e8;
 $sans: 'Sen',  "Comic Sans MS", "Comic Sans", cursive;
 $serif: 'DejaVu', 'Papyrus', serif;
 
